---
title: Jarvis — alert lifecycle state machine
---
stateDiagram-v2
    [*] --> firing: alert first seen in Alertmanager

    firing --> suppressed: silence activated
    firing --> resolved: alert gone from AM API

    suppressed --> firing: silence expired/deleted\n(expired event + new firing event)
    suppressed --> resolved: problem fixed while silence active\n(no expired event)

    resolved --> firing: alert reappears\n(grace period max(60s, 2×poll interval):\nreopen if within window, otherwise new episode)

    note right of suppressed
        occurrence_count increments only
        on re-fire after a full resolution,
        never on the first firing
        (Critical Invariant #2)
    end note

    note right of resolved
        Re-fire within the grace period →
        resolved row deleted, old event
        continues — no new episode
        (Critical Invariant #1)
    end note
